--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "threejs-journey-exercise",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,12 +15,16 @@
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
     "@react-three/rapier": "^0.9.0",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "gsap": "^3.12.2",
     "leva": "^0.9.34",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-dom": "18.2",
     "three": "^0.148.0",
+    "typescript": "^5.1.6",
     "zustand": "4.3"
   }
 }
